WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13184
HTMLImageElement longdesc should be complete resolved URL
https://bugs.webkit.org/show_bug.cgi?id=13184
Summary
HTMLImageElement longdesc should be complete resolved URL
Nicholas Shanks
Reported
2007-03-24 15:17:34 PDT
Attached
Attachments
fix
(952 bytes, patch)
2007-03-24 15:21 PDT
,
Nicholas Shanks
no flags
Details
Formatted Diff
Diff
now includes test case
(4.04 KB, patch)
2007-03-24 16:31 PDT
,
Nicholas Shanks
no flags
Details
Formatted Diff
Diff
changed blurb of test's self description
(4.01 KB, patch)
2007-03-24 16:34 PDT
,
Nicholas Shanks
no flags
Details
Formatted Diff
Diff
bugger, forgot to update expected results too
(3.98 KB, patch)
2007-03-24 16:46 PDT
,
Nicholas Shanks
darin
: review-
Details
Formatted Diff
Diff
addresses darin's issue
(4.24 KB, patch)
2007-03-25 04:17 PDT
,
Nicholas Shanks
adele
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Nicholas Shanks
Comment 1
2007-03-24 15:21:15 PDT
Created
attachment 13801
[details]
fix
Nicholas Shanks
Comment 2
2007-03-24 16:31:06 PDT
Created
attachment 13802
[details]
now includes test case
Nicholas Shanks
Comment 3
2007-03-24 16:34:22 PDT
Created
attachment 13803
[details]
changed blurb of test's self description
Nicholas Shanks
Comment 4
2007-03-24 16:46:26 PDT
Created
attachment 13804
[details]
bugger, forgot to update expected results too
Darin Adler
Comment 5
2007-03-24 20:00:45 PDT
Comment on
attachment 13804
[details]
bugger, forgot to update expected results too Looks fine. Also need to change HTMLImageElement::isURLAttribute to return true for longdescAttr. I noticed that by comparing with the handling of lowsrcAttr. review- so you can fix that
Nicholas Shanks
Comment 6
2007-03-25 04:17:31 PDT
Created
attachment 13811
[details]
addresses darin's issue
Alexey Proskuryakov
Comment 7
2007-03-31 03:24:10 PDT
Committed revision 20637.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug