2007-03-31  Nicholas Shanks  <webkit@nickshanks.com>

Reviewed by Adele.

        http://bugs.webkit.org/show_bug.cgi?id=13184
        HTMLImageElement longdesc should be complete resolved URL

        Test: fast/dom/HTMLImageElement/image-longdesc-absolute-url.html

        * html/HTMLImageElement.cpp:
        (WebCore::HTMLImageElement::longDesc): Return absolute URL.
        Behaviour now matches Firefox and Opera.



git-svn-id: svn://svn.chromium.org/blink/trunk@20637 bbb929c8-8fbe-4397-9dbb-9b2b20218538