third_party/WebKit/WebCore/html/HTMLImageElement.cpp
@@ -261,6 +261,7 @@ bool HTMLImageElement::isURLAttribute(Attribute* attr) const
 {
     return attr->name() == srcAttr
         || attr->name() == lowsrcAttr
+        || attr->name() == longdescAttr
         || (attr->name() == usemapAttr && attr->value().domString()[0] != '#');
 }
 
@@ -332,7 +333,7 @@ void HTMLImageElement::setIsMap(bool isMap)
 
 String HTMLImageElement::longDesc() const
 {
-    return getAttribute(longdescAttr);
+    return document()->completeURL(getAttribute(longdescAttr));
 }
 
 void HTMLImageElement::setLongDesc(const String& value)
